...
            requestLegacyAddressButton.bottomAnchor.constraint(equalTo: view.bottomAnchor, constant: E.isIPhoneXOrGreater ? -C.padding[5] : -C.padding[2])
        ])
    }

    private func setStyle() {
        view.backgroundColor = .clear
        qrCode.accessibilityIdentifier = "receive-qr-code"
        addressButton.accessibilityIdentifier = "receive-address-button"
        requestLegacyAddressButton.accessibilityIdentifier = "receive-alternative-address-button"
        requestString.textColor = C.Colors.text
        requestString.numberOfLines = 3
        requestString.text = "\n\n"
        requestString.textAlignment = .center
        requestString.lineBreakMode = .byCharWrapping
        share.isUserInteractionEnabled = true
...
