...
            return
        }
        
        if !isConnected {
            // Show: Not connected
            lastKnownConnectionState = S.NodeSelector.notConnected
            topRightImage.image = UIImage(named: "disconnected")?.withRenderingMode(.alwaysTemplate)
            topRightImage.tintColor = C.Colors.weirdRed
        } else {
            // Show: connected
            lastKnownConnectionState = S.SyncingView.syncing
            topRightImage.image = UIImage(named: "connected")?.withRenderingMode(.alwaysTemplate)
            topRightImage.tintColor = C.Colors.weirdGreen
        }
    }
    
    private func imageWithColor(_ img: UIImage, color: UIColor) -> UIImage {
        UIGraphicsBeginImageContextWithOptions(img.size, false, img.scale)
...
